--- a/config.yaml
+++ b/config.yaml
@@ -11,9 +11,9 @@ logging:              # Define the logging behaviours
 
 data:                 # Define the data related behaviours
   dirs:
-    base_dir: /Users/bis/Documents/Abhishek/BoilerPlate/data
-    train_dir: dog-breed-identification/train
-    test_dir:
+    base_dir: /home/antpc/PycharmProjects/BoilerPlate/data
+    train_dir: SIGNS_dataset/train_signs
+    test_dir: SIGNS_dataset/test_signs
     output_dir:       # Give some other path explicitly
     img_type: jpg
 
@@ -30,8 +30,8 @@ data:                 # Define the data related behaviours
       8: 8
       9: 9
     label_file:
-      type: csv
-      path: dog-breed-identification/labels.csv
+      type:
+      path: DogBreed_dataset/labels.csv
       id_column: id
       target_column: breed
 
